--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,9 @@
 hkube_api_url: https://dev.hkube.org
 server_path: ./server.py
 debug: false
+# LLM endpoint used by mcp-cli (required)
+mll_url: http://D-p-elihu-l-rf:11434
+# Model name used for generation (required)
+model: gpt-oss:20b
+# Assistant display name
+assistant_name: HKube Chat
